java-decompiler: post-import cleanup (formatting and copyright)